public class Events
{
    public class Player
    {
        public const string Move = "Player.Move";
        public const string Stop = "Player.Stop";
        public const string MouseRotate = "Player.MouseRotate";
        public const string JoystickRotate = "Player.JoystickRotate";
        public const string Dodge = "Player.Dodge";
        public const string Defense = "Player.Defense";
        public const string Atack_1 = "Player.Atack_1";
        public const string Atack_2 = "Player.Atack_2";
        public const string Atack_3 = "Player.Atack_3";
        public const string Atack_4 = "Player.Atack_4";
        public const string Item_1 = "Player.Itam_1";
        public const string Item_2 = "Player.Item_2";
        public const string Item_3 = "Player.Item_3";
    }
}
